<resources>
    <string name="app_name">RxKotlin Playground</string>
    <string name="apply_operator">Apply Operator</string>
    <string name="simple_example">Simple Example</string>
    <string name="map">Map</string>
    <string name="zip">Zip</string>
    <string name="filter">Filter</string>
    <string name="take">Take</string>
    <string name="reduce">Reduce</string>
  <string name="skip">Skip</string>
  <string name="flatmap">FlatMap</string>
    <string name="distinct">Distinct</string>
    <string name="just">just</string>
    <string name="operators">Operators</string>
    <string name="creating_observables">Observables Creation</string>
</resources>
