<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="neo.rxkotlin.playground.OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSimpleExampleActivity"
            android:text="@string/simple_example" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMapExampleActivity"
            android:text="@string/map" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startZipExampleActivity"
            android:text="@string/zip" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterExampleActivity"
            android:text="@string/filter" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTakeExampleActivity"
            android:text="@string/take" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startReduceExampleActivity"
            android:text="@string/reduce" />

    </LinearLayout>

</ScrollView>